# FTSPlot

./: .travis.yml  CMakeLists.txt  ColorDialogDelegate.cpp  ColorDialogDelegate.h  ColorDialogEditor.cpp  ColorDialogEditor.h  DeleteCursor.xcf  DeleteCursorData.xbm  DisplayListData.h  EditorUtils.hpp  EventEditor.cpp  EventEditor.cpp.orig  EventEditor.h  EventEditorDeleteListWarning.ui  EventEditorGUI.ui  EventEditorLoader.cpp  EventEditorLoader.h  EventEditorNewFileDialogGUI.ui  FTSPlot.h  FTSPlotMain.cpp  FTSPlotMainWindow.ui  FTSPlotModulesModel.cpp  FTSPlotModulesModel.h  FTSPlotWidget.cpp  FTSPlotWidget.h  FTSPrep.cpp  FTSPrep.h  FTSPrepGUI.cpp  FTSPrepGUI.h  FTSPrepGUI.ui  FTSPrepMain.cpp  FileOpenFailed.ui  GL_Layer.cpp  GL_Layer.h  GUIstate.h  HideNotifyWidget.cpp  HideNotifyWidget.h  Interval.cpp  Interval.cpp.orig  Interval.h  (+40 more)
benchmarks/: CMakeLists.txt  FTSPlotBench.cpp  FTSPlotBenchMainWindow.cpp  FTSPlotBenchMainWindow.h  FTSPlotBenchMainWindow.ui  O1PlotBench.cpp  O1PlotBenchMainWindow.cpp  O1PlotBenchMainWindow.h  O1PlotBenchMainWindow.ui  benchmarkHelper.cpp  benchmarkHelper.h
tests/: CMakeLists.txt  EditModuleTest.cpp  EditModuleTest.h  EventEditorTest.cpp  EventEditorTest.h  EventsTest.cpp  EventsTest.h  FTSPlotWidgetTest.cpp  FTSPlotWidgetTest.h  IntervalEditorTest.cpp  IntervalEditorTest.h  IntervalsTest.cpp  IntervalsTest.h  ListModulesTest.cpp  ListModulesTest.h  ModifyColorTest.cpp  ModifyColorTest.h  ReorderModulesTest.cpp  ReorderModulesTest.h  ShowHideTest.cpp  ShowHideTest.h  SimpleViewTest.cpp  SimpleViewTest.h  TimeSeriesPlotTest.cpp  TimeSeriesPlotTest.h  XRangeTest.cpp  XRangeTest.h  YRangeTest.cpp  YRangeTest.h  runTests.cpp
